--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html >
 <head>
+  {% load static %}
   <meta charset="UTF-8">
-  <title>Countdown Clock</title>
+  <title>Saheede Aajam Sardar Bhagat Singh Inter College</title>
   
   
   
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
   
 </head>
@@ -23,7 +24,7 @@
 </div>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-    <script src="js/index.js"></script>
+    <script src="{% static 'js/index.js' %}"></script>
 
 </body>
 </html>
